<resources>
    <string name="app_name">LocMess</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="leave_message">Leave a Message</string>
    <string name="name_surname">Name Surname</string>
    <string name="name_text">Name</string>
    <string name="surname_text">Surname</string>
    <string name="username">username</string>
    <string name="username_text">Username</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="default_count">0</string>
    <string name="who_see_this">Who Can See This ?</string>
    <string name="send_text">Send</string>
    <string name="everyone_text">Everyone</string>
    <string name="choose_people">Choose People</string>
    <string name="first_x_people">First X People</string>
    <string name="select_text">Select</string>
    <string name="remove_text">Remove</string>
    <string name="done">Done</string>
    <string name="remove_all">Remove All</string>
    <string name="unfollow_text">Unfollow</string>
    <string name="follow_text">Follow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back Button</string>
    <string name="user_photo">User Photo</string>
    <string name="options_vertical_three_dots">Options Button</string>
    <string name="public_earth_icon">Public Earth Icon</string>
    <string name="followers_icon">Followers Icon</string>
    <string name="add_person_icon">Add Person Icon</string>
    <string name="numbers_icon">Numbers  Icon</string>
    <string name="add_video_icon">Add Video Icon</string>
    <string name="add_image_icon">Add Image Icon</string>
    <string name="person_icon">Person Icon</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="warning_text">Warning Text</string>
    <string name="cancel_text">Cancel</string>
    <string name="remove_user_text">Do you want to remove this user from your followers?</string>
    <string name="messages_text">Messages</string>
    <string name="close_icon">Close Icon</string>
    <string name="location_text">Location</string>
    <string name="who_can_see_icon">Who can see icon</string>
    <string name="message_content">Message Content</string>
    <string name="seen_count">Seen Count</string>
    <string name="reply_count">Reply Count</string>
    <string name="seen_count_icon">Seen Count Icon</string>
    <string name="reply_count_icon">Reply Count Icon</string>
    <string name="date_time">Date Time</string>
    <string name="lorem_ipsum">Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir.</string>
    <string name="search_text">Search…</string>
    <string name="save_button">Save Button</string>
    <string name="profile_details">Profile Details</string>
    <string name="email_address">E-Mail Address</string>
    <string name="private_information_text">Private Information</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="logout_text">Logout</string>
    <string name="remove_account_text">Remove Account</string>
    <string name="change_password_text">Change Password</string>
    <string name="current_password_text">Current Password</string>
    <string name="new_password_text">New Password</string>
    <string name="new_password_again_text">New Password, Again</string>
    <string name="password_text">Password</string>
    <string name="app_logo_locmess">App Logo LocMess</string>
    <string name="create_account_text">Create Account</string>
    <string name="already_a_member_text">Already a member? Login</string>
    <string name="password_confirm_text">Password Confirm</string>

    <string-array name="person_count">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>100</item>
        <item>250</item>
        <item>500</item>
        <item>1000</item>
    </string-array>

</resources>
