<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:id="@+id/bottom_sheet_layout">

    <View
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_border_with_gray_color"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/bottom_sheet_heading"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/who_see_this"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_color"/>

    <LinearLayout
        android:id="@+id/bottom_everyone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_public_black_36dp"
            android:contentDescription="@string/public_earth_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/everyone_text"
            android:textColor="@color/black_color"
            android:layout_marginStart="10dp"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_followers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_group_black_36dp"
            android:contentDescription="@string/followers_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/followers"
            android:textColor="@color/black_color"
            android:layout_marginStart="10dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_choose_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/ic_person_add_black_36dp"
            android:contentDescription="@string/add_person_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/choose_people"
            android:textColor="@color/black_color"
            android:layout_marginStart="10dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_first_x_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_format_list_numbered_black_36dp"
            android:contentDescription="@string/numbers_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/first_x_people"
            android:layout_marginStart="10dp"
            android:textColor="@color/black_color"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>