<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_user_info_dialog">

    <RelativeLayout
        android:id="@+id/user_info_dialog_photo_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/user_info_dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_white_24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/close_icon"/>

        <ImageView
            android:id="@+id/user_info_dialog_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/defaultprofilephoto"
            android:contentDescription="@string/user_photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_info_dialog_text_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_info_dialog_photo_relative"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/user_info_dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textStyle="bold"
            android:textColor="@color/white_color"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_info_dialog_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_text"
            android:textStyle="bold"
            android:textColor="@color/white_color"
            android:layout_toEndOf="@+id/user_info_dialog_name"
            android:textSize="18sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/user_info_dialog_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="15sp"
            android:textColor="@color/light_grey_color"
            android:layout_below="@id/user_info_dialog_name"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/user_info_dialog_text_relative"
        android:layout_marginTop="10dp"
        android:weightSum="3"
        android:background="@drawable/background_border_color_primary_bottom_radius">

        <LinearLayout
            android:id="@+id/user_info_dialog_messages_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/user_info_dialog_messages_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_color"
                android:text="@string/messages_text"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_info_dialog_messages_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_count"
                android:textColor="@color/black_color"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:id="@+id/user_info_dialog_followers_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/user_info_dialog_followers_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_color"
                android:text="@string/followers"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_info_dialog_followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_count"
                android:textColor="@color/black_color"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:id="@+id/user_info_dialog_following_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/user_info_dialog_following_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white_color"
            android:text="@string/following"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/user_info_dialog_following_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_count"
            android:textColor="@color/black_color"
            android:textSize="16sp"/>

    </LinearLayout>

    </LinearLayout>


</RelativeLayout>