<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimaryDark"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/defaultprofilephoto"
        android:contentDescription="@string/user_photo"/>

    <RelativeLayout
        android:id="@+id/nav_header_text_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/nav_header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textStyle="bold"
            android:textColor="@color/white_color"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/nav_header_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_text"
            android:textStyle="bold"
            android:textColor="@color/white_color"
            android:layout_toEndOf="@+id/nav_header_name"
            android:textSize="16sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/nav_header_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="15sp"
            android:textColor="@color/light_grey_color"
            android:layout_below="@id/nav_header_name"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:weightSum="3"
        android:background="@color/white_color">

        <LinearLayout
            android:id="@+id/nav_header_messages_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/nav_header_messages_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_color"
                android:text="@string/messages_text"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nav_header_messages_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_count"
                android:textColor="@color/black_color"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:id="@+id/nav_header_followers_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/nav_header_followers_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_color"
                android:text="@string/followers"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nav_header_followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_count"
                android:textColor="@color/black_color"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:id="@+id/nav_header_following_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/nav_header_following_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_color"
                android:text="@string/following"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nav_header_following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_count"
                android:textColor="@color/black_color"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>