<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <include layout="@layout/snippet_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:theme="@style/TextLabel"
            android:inputType="textPassword"
            android:hint="@string/current_password_text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:theme="@style/TextLabel"
            android:inputType="textPassword"
            android:hint="@string/new_password_text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:theme="@style/TextLabel"
            android:inputType="textPassword"
            android:hint="@string/new_password_again_text"/>

    </LinearLayout>

</RelativeLayout>